2004-04-04  Seth Burgess <sjburges@gimp.org>
	* Net/Net.pm: removed some obsolete params being passed to gimp
	* t/run.t: commented out most of the tests.  Re-did a regex so it
	  actually will return a reasonable path for symlinking.

2004-03-29  Seth Burgess <sjburges@gimp.org>
	* examples/yinyang: moved to Render at TomR's suggestion.

2004-03-28  Dov Grobgeld  <dov@imagic.weizmann.ac.il>

	* examples/examples.TODO: Removed gimp-make-img-map, gallery,
	and stampify and gallery from untested section
	* examples/stamps: fixed
	* examples/stampify: fixed
	* examples/gallery: fixed
	* examples/yinyang: fixed
	* examples/gimp-make-img-map: fixed
	* examples/tex-to-float: fixed, erased various debug output

2004-3-28 Seth Burgess <sjburges@gimp.org>
	* UI/Makefile.PL: removed pkg->add_define call, since its no longer in 
	Extutils::Depends 0.20x.  Need to generate another release for this, 
	since its a blocker for people installing (a somewhat-important step).   
2004-3-27 Seth Burgess <sjburges@gimp.org>
	* GIMP.pm: updated enums
	
	* examples/blended2: fixed, updated enums, removed 
	extraneous 'exit main'.
	* examples/tex-to-float: moved to Render
	* examples/translogo: moved to Web
	* examples/webify: s/push_group/push/

	* examples/fade-alpha 
	* examples/innerbevel 
	* examples/randomart1: updated enums

	* examples/examples.TODO: updated accordingly

2004-3-22 Seth Burgess <sjburges@gimp.org>
	* Makefile.PL: don't install known broken plugins
	* TODO: split between Marc and Seth lists 
	* Gimp.pm: updated POD a bit to reflect a bit more reality
	
	* examples/fade-alpha: renamed registering to fade_alpha, fixed typos
        * examples/frame_filter: moved to Filters/Generic/ 
	* examples/pixelmap: moved to Filters/Generic/
	* examples/examples.TODO: updated accordingly + can't use example-oo

2004-3-21 Manish Singh <yosh@gimp.org>
	* configure: Quick fix to make it build with current gimp. Real fix 
	  is a lot more work, so punt for later.
