@@ -1,4 +1,4 @@
-#!/opt/bin/perl
+#!/usr/bin/perl
 
 # you can enable unix sockets, tcp sockets, or both (or neither...)
 #
@@ -307,7 +307,8 @@ Gimp::on_query {
    Gimp->install_procedure("extension_perl_server", "Start the Gimp-Perl Server",
                            "This is the server for plug-ins written using the Gimp::Net module",
                            "Marc Lehmann <pcg\@goof.com>", "Marc Lehmann", "1999-12-02",
-                           N_"<Toolbox>/Xtns/Perl/Server", undef, &Gimp::EXTENSION,
+                          # N_"<Toolbox>/Xtns/Perl/Server", undef, &Gimp::EXTENSION,
+                           N_"<Toolbox>/Xtns/Perl/Server", undef, &Gimp::PLUGIN,
                            [
                             [&Gimp::PDB_INT32, "run_mode", "Interactive, [non-interactive]"],
                             [&Gimp::PDB_INT32, "flags", "internal flags (must be 0)"],
@@ -318,7 +319,8 @@ Gimp::on_query {
                            "Plug-ins should register their custom constants using this function, so".
                            "other plug-ins (notably script-languages) can access these using symbolic names",
                            "Marc Lehmann <pcg\@goof.com>", "Marc Lehmann", "1999-07-07",
-                           undef, undef, &Gimp::EXTENSION,
+                         #  undef, undef, &Gimp::EXTENSION,
+                           undef, undef, &Gimp::PLUGIN,
                            [
                             [&Gimp::PDB_STRING, "procedure", "The name of the function that uses this constant"],
                             [&Gimp::PDB_STRING, "arg_num", "The name of the argument that this constant is used for"],
@@ -328,7 +330,8 @@ Gimp::on_query {
    Gimp->install_procedure("gimp_procedural_db_set_default", "Set the default value for a plug-in argument",
                            "Plug-ins should register default values for their arguments",
                            "Marc Lehmann <pcg\@goof.com>", "Marc Lehmann", "1999-07-07",
-                           undef, undef, &Gimp::EXTENSION,
+                         #  undef, undef, &Gimp::EXTENSION,
+                           undef, undef, &Gimp::PLUGIN,
                            [
                             [&Gimp::PDB_STRING, "procedure", "The name of the function that uses this constant"],
                             [&Gimp::PDB_STRING, "arg_num", "The name of the argument that this constant is used for"],
